--- a/main/index.html
+++ b/main/index.html
@@ -17,13 +17,13 @@
 	<!-- Elementos que compõe o cabeçalho. -->
 	<header>
 		<a href="./index.html" id="logo">Logo</a>
-		<!--Botão/Button para Abrir Menu-->
+		<!--Button/Botão para Abrir Menu-->
 		<button id="openMenu">&#9776;</button>
 	</header>
 
 	<!-- Nav/Navegação de links -->
 	<nav id="menu">
-		<!--Botão/Button para Fechar Menu-->
+		<!--Button/Botão para Fechar Menu-->
 		<button id="closeMenu">X</button>
 
 		<a href="#">Home</a>
