--- a/main/index.html
+++ b/main/index.html
@@ -27,8 +27,8 @@
 		<button id="closeMenu">X</button>
 
 		<a href="#">Home</a>
-		<a href="#">About</a>
-		<a href="">Contact</a>
+		<a href="#">Conteúdo</a>
+		<a href="">Finalização</a>
 	</nav>
 
 	<!-- Conteúdo Principal da Página -->
