--- a/main/index.html
+++ b/main/index.html
@@ -8,6 +8,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="icon" type="image/x-icon" href="/assets/img/favicons/favicon-16x16.png"/>
 	<title>Agrinho</title>
 </head>
 
@@ -16,7 +17,8 @@
 
 	<!-- Elementos que compõe o cabeçalho. -->
 	<header>
-		<a href="./index.html" id="logo">Logo</a>
+		<a href="./index.html" id="logo">Do Campo à Cidade</a>
+		
 		<!--Button/Botão para Abrir Menu-->
 		<button id="openMenu">&#9776;</button>
 	</header>
@@ -38,7 +40,25 @@
 	<aside>Aside</aside>
 
 	<!-- Contéudo Final com links -->
-	<footer>Footer</footer>
+	<footer>
+		<div class="Container-footer">
+			<div class="Icons">
+				<a href=""><i class="fa-brands fa-instagram"></i></a>
+				<a href=""><i class="fa-brands fa-google-plus"></i></a>
+				<a href=""><i class="fa-brands fa-youtube"></i></a>
+			</div>
+			<div class="Nav-footer">
+				<ul><li><a href="">Home</a></li>
+					<li><a href="">Principal</a></li>
+					<li><a href="">Fotos</a></li>
+				</ul>
+			</div>
+			
+		</div>
+		<div class="Bottom-footer">
+			<p>Copyright &copy;2024; Criado por <span class="designer-criador">João Pedro Peron</span></p>
+		</div>
+	</footer>
 
 	<!-- Link para Acesso do JavaScript -->
 	<script type="text/javascript" src="assets/js/script.js"></script>
