--- a/main/index.html
+++ b/main/index.html
@@ -4,11 +4,10 @@
 
 <!-- Head/Cabeça contém metadados visíveis somente ao computador-->
 <head>
-
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link rel="icon" type="image/x-icon" href="/assets/img/favicons/favicon-16x16.png"/>
+	<link rel="short icon" type="image/png" href="/assets/img/favicons/favicon-16x16.png"/>
 	<title>Agrinho</title>
 </head>
 
@@ -17,8 +16,9 @@
 
 	<!-- Elementos que compõe o cabeçalho. -->
 	<header>
-		<a href="./index.html" id="logo">Do Campo à Cidade</a>
-		
+		<a href="./index.html" id="logo">Do Campo à Cidade, Colhendo Oportunidades</a>
+		<img class="logo-img" src="assets/img/agrinho_2024.png" alt="Logo com Imagem do Agrinho 2024">
+			
 		<!--Button/Botão para Abrir Menu-->
 		<button id="openMenu">&#9776;</button>
 	</header>
