--- a/main/index.html
+++ b/main/index.html
@@ -41,7 +41,7 @@
 
 	<!-- Contéudo Final com links -->
 	<footer>
-		<div class="Container-footer">
+		<section class="Container-footer">
 			<div class="Icons">
 				<a href=""><i class="fa-brands fa-instagram"></i></a>
 				<a href=""><i class="fa-brands fa-google-plus"></i></a>
@@ -54,7 +54,7 @@
 				</ul>
 			</div>
 			
-		</div>
+		</section>
 		<div class="Bottom-footer">
 			<p>Copyright &copy;2024; Criado por <span class="designer-criador">João Pedro Peron</span></p>
 		</div>
