--- a/main/index.html
+++ b/main/index.html
@@ -29,7 +29,8 @@
 		<!--Button/Botão para Fechar Menu-->
 		<button id="closeMenu">X</button>
 
-		<a href="#">Home</a>
+		<!--Redirecionar Página-->
+		<a href="./index.html">Home</a>
 		<a href="#principal">Principal</a>
 		<a href="#fotos">Fotos</a>
 	</nav>
@@ -50,23 +51,31 @@
 			</div>
 			<div class="foto" id="foto2">
 				<a href="#foto2">
-					<img src="assets/img/agricultura_vertical.jpg" alt="Foto de uma Estufa Vertical">
+					<img src="assets/img/agricultura_vertical.jpg" alt="Foto de uma Estufa Vertical" title="https://www.gettyimages.com.br/detail/foto/vertical-hydroponic-specialists-conversing-in-dark-imagem-royalty-free/1324696450?adppopup=true">
 				</a>
 				<div class="descricao">
-					Descrição da Imagem<br><a href="#fechar">Fechar</a>
+					<p>Descrição da Imagem</p><br><a href="#fechar">Fechar</a>
 				</div>
 			</div>
 			<div class="foto" id="foto3">
 				<a href="#foto3">
-					<img src="assets/img/irrigacao.jpg" alt="Foto de um Drone Sobrevoando uma Plantação">
+					<img src="assets/img/irrigacao.jpg" alt="Foto de um Irrigação" title="https://www.gettyimages.com.br/detail/foto-jornalística/farmers-use-a-telescopic-water-fertilizer-integrated-foto-jornalística/2151536848">
 				</a>
 				<div class="descricao">
 					Descrição da Imagem<br><a href="#fechar">Fechar</color:></a>
 				</div>
 			</div>
-			<div class="foto" id="foto4">
-				<a href="#foto4">
-					<img src="assets/img/agricultura_precisao.jpg" alt="Foto de um Drone Sobrevoando uma Plantação">
+			<div class="foto" id="foto3">
+				<a href="#foto3">
+					<img src="assets/img/irrigacao.jpg" alt="Foto de um Irrigação" title="https://www.gettyimages.com.br/detail/foto-jornalística/farmers-use-a-telescopic-water-fertilizer-integrated-foto-jornalística/2151536848">
+				</a>
+				<div class="descricao">
+					Descrição da Imagem<br><a href="#fechar">Fechar</color:></a>
+				</div>
+			</div>
+			<div class="foto" id="foto5">
+				<a href="#foto5">
+					<img src="assets/img/cidade_agricultura.jpg" alt="Foto de Ilustrativa entre o Campo e a Cidade" title="https://www.gettyimages.com.br/detail/foto/sustainable-growth-imagem-royalty-free/1477817701?adppopup=true">
 				</a>
 				<div class="descricao">
 					Descrição da Imagem<br><a href="#fechar">Fechar</color:></a>
