--- a/main/index.html
+++ b/main/index.html
@@ -18,8 +18,10 @@
 	<!-- Elementos que compõe o cabeçalho. -->
 	<header>
 		<a href="./index.html" id="logo">Do Campo à Cidade, Colhendo Oportunidades</a>
-		<img class="logo-img" src="assets/img/agrinho_2024.png" alt="Logo com a Imagem do Agrinho 2024">
-			
+		<a href="./index.html">
+			<img class="logo-img" src="assets/img/agrinho_2024.png" alt="Logo com a Imagem do Agrinho 2024">
+		</a>	
+
 		<!--Button/Botão para Abrir Menu-->
 		<button id="openMenu">&#9776;</button>
 	</header>
@@ -32,21 +34,31 @@
 		<!--Redirecionar Página-->
 		<a href="./index.html">Home</a>
 		<a href="#principal">Principal</a>
-		<a href="#fotos">Fotos</a>
+		<a href="#fotos">Parceiros</a>
 	</nav>
 
 	<!-- Conteúdo Principal da Página -->
-	<main><a name="principal">Main</a></main>
+	<main><a name="principal"></a>
+		<section class="content">
+            <h2>Desenvolvimento Sustentável</h2>
+            <p>O avanço da tecnologia tem permitido uma integração cada vez maior entre o campo e a cidade, contribuindo para o desenvolvimento sustentável e a melhoria da qualidade de vida nas áreas urbanas e rurais. Essa integração se dá por meio de diversas tecnologias inovadoras que conectam e otimizam os processos produtivos, facilitando a troca de informações e conhecimentos entre os ambientes rural e urbano.</p>
+            <p>No campo, a tecnologia tem sido fundamental para aumentar a eficiência na produção agrícola, tornando-a mais sustentável e produtiva. A agricultura de precisão, por exemplo, utiliza o monitoramento por satélite, drones e sensores para avaliar e monitorar as condições do solo, clima e culturas, permitindo uma gestão mais eficiente dos recursos naturais e a redução do uso de agroquímicos.</p>
+            <p>Além disso, a agricultura vertical e os sistemas de irrigação inteligentes têm sido cada vez mais adotados para aumentar a produção de alimentos em áreas urbanas, reduzindo a dependência de alimentos importados e melhorando a segurança alimentar das populações urbanas.</p>
+            <p>Por outro lado, as cidades estão se beneficiando das tecnologias do campo, como a produção local de alimentos, a gestão inteligente de resíduos e a geração de energia limpa a partir de resíduos orgânicos. Essas práticas contribuem para a redução da pegada de carbono das cidades e para a criação de ambientes urbanos mais sustentáveis e saudáveis.</p>
+            <p>Além disso, a conexão entre o campo e a cidade por meio da tecnologia também possibilita a criação de cadeias de produção mais eficientes e transparentes, incentivando a valorização dos produtos locais e o desenvolvimento econômico de regiões rurais.</p>
+            <p>Em resumo, a integração entre o campo e a cidade por meio da tecnologia é essencial para promover o desenvolvimento sustentável e a qualidade de vida em ambas as áreas. A troca de conhecimentos, práticas e tecnologias entre esses dois ambientes é fundamental para garantir a segurança alimentar, a sustentabilidade ambiental e o bem-estar das comunidades rurais e urbanas.</p>
+        </section>
+	</main>
 
 	<!-- Conteúdo relacionado ao Principal/Main -->
-	<aside><a name="fotos"></a>
+	<aside>
 		<section id="galery">
 			<div class="foto" id="foto1">
 				<a href="#foto1">
 					<img src="assets/img/agricultura_precisao.jpg" alt="Foto de um Drone Sobrevoando uma Plantação" title="https://www.gettyimages.com.br/detail/foto/drone-with-camera-in-field-imagem-royalty-free/881831452?adppopup=true">
 				</a>
 				<div class="descricao">
-					Descrição da Imagem<br><a href="#fechar">Fechar</a>
+					- Agricultura de Precisao<br><a href="#fechar">Fechar</a>
 				</div>
 			</div>
 			<div class="foto" id="foto2">
@@ -54,7 +66,7 @@
 					<img src="assets/img/agricultura_vertical.jpg" alt="Foto de uma Estufa Vertical" title="https://www.gettyimages.com.br/detail/foto/vertical-hydroponic-specialists-conversing-in-dark-imagem-royalty-free/1324696450?adppopup=true">
 				</a>
 				<div class="descricao">
-					<p>Descrição da Imagem</p><br><a href="#fechar">Fechar</a>
+					- Agricultura Vertical<br><a href="#fechar">Fechar</a>
 				</div>
 			</div>
 			<div class="foto" id="foto3">
@@ -62,27 +74,31 @@
 					<img src="assets/img/irrigacao.jpg" alt="Foto de um Irrigação" title="https://www.gettyimages.com.br/detail/foto-jornalística/farmers-use-a-telescopic-water-fertilizer-integrated-foto-jornalística/2151536848">
 				</a>
 				<div class="descricao">
-					Descrição da Imagem<br><a href="#fechar">Fechar</color:></a>
+					- Irrigação Inteligente<br><a href="#fechar">Fechar</color:></a>
 				</div>
 			</div>
-			<div class="foto" id="foto3">
-				<a href="#foto3">
-					<img src="assets/img/irrigacao.jpg" alt="Foto de um Irrigação" title="https://www.gettyimages.com.br/detail/foto-jornalística/farmers-use-a-telescopic-water-fertilizer-integrated-foto-jornalística/2151536848">
-				</a>
+			<div class="foto" id="foto4">
+				<a href="#foto4">
+					<img src="assets/img/ciadade_e_construcao.jpg" alt="Foto de um Homenageativa" title="https://www.gettyimages.com.br/detail/foto/sustainable-growth-imagem-royalty-free/1477817701?adppopup=true">
 				<div class="descricao">
-					Descrição da Imagem<br><a href="#fechar">Fechar</color:></a>
+					- Coletivismo através da Teconologia<br><a href="#fechar">Fechar</color:></a>
 				</div>
 			</div>
 			<div class="foto" id="foto5">
 				<a href="#foto5">
-					<img src="assets/img/cidade_agricultura.jpg" alt="Foto de Ilustrativa entre o Campo e a Cidade" title="https://www.gettyimages.com.br/detail/foto/sustainable-growth-imagem-royalty-free/1477817701?adppopup=true">
-				</a>
+					<img src="assets/img/cidade_agricultura.jpg" alt="Foto de Ilustrativa entre o Campo e a Cidade" title="https://www.gettyimages.com.br/detail/foto/young-people-learning-urban-gardening-imagem-royalty-free/1198696330">
 				<div class="descricao">
-					Descrição da Imagem<br><a href="#fechar">Fechar</color:></a>
+					- Jovens Praticando Agricultura Sustentável <br><a href="#fechar">Fechar</color:></a>
 				</div>
 			</div>
 		</section>
 	</aside>
+
+	<article><a name="fotos"></a>Parceiros em Relação ao Agrinho
+		<div>
+			<img src="">
+		</div>
+	</article>
 
 	<!-- Contéudo Final com links -->
 	<footer>
@@ -93,9 +109,9 @@
 				<a href="https://m.facebook.com/Col14deDezembro/"><i class="fa-brands fa-facebook"></i></a>
 			</div>
 			<div class="Nav-footer">
-				<ul><li><a href="">Home</a></li>
-					<li><a href="">Principal</a></li>
-					<li><a href="">Fotos</a></li>
+				<ul><li><a href="./index.html">Home</a></li>
+					<li><a href="#principal">Principal</a></li>
+					<li><a href="#fotos">Parceiros</a></li>
 				</ul>
 			</div>
 			
