--- a/index.html
+++ b/index.html
@@ -2,42 +2,33 @@
 
 <html lang="pt-br">
 
-<!-- Head/Cabeça contém metadados visíveis somente ao computador-->
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link rel="short icon" type="image/png" href="/assets/img/favicons/favicon-16x16.png"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<title>Agrinho</title>
+	<title>Sustentabilidade Agrinho</title>
 </head>
 
-<!-- Body/Corpo contém elementos visíveis ao usuário -->
 <body>
 
-	<!-- Elementos que compõe o cabeçalho. -->
 	<header>
 		<a href="./index.html" id="logo">Do Campo à Cidade, Colhendo Oportunidades</a>
 		<a href="./index.html">
-			<img class="logo-img" src="assets/img/agrinho_2024.png" alt="Logo com a Imagem do Agrinho 2024">
+			<img class="logo-img" src="assets/img/agrinho_logo.png" alt="Logo Agrinho 2024">
 		</a>	
 
-		<!--Button/Botão para Abrir Menu-->
 		<button id="openMenu">&#9776;</button>
 	</header>
 
-	<!-- Nav/Navegação de links -->
 	<nav id="menu">
-		<!--Button/Botão para Fechar Menu-->
 		<button id="closeMenu">X</button>
 
-		<!--Redirecionar Página-->
 		<a href="./index.html">Home</a>
 		<a href="#principal">Principal</a>
 		<a href="#fotos">Parceiros</a>
 	</nav>
 
-	<!-- Conteúdo Principal da Página -->
 	<main><a name="principal"></a>
 		<section class="content">
             <h2>Desenvolvimento Sustentável</h2>
@@ -50,55 +41,61 @@
         </section>
 	</main>
 
-	<!-- Conteúdo relacionado ao Principal/Main -->
 	<aside>
 		<section id="galery">
 			<div class="foto" id="foto1">
 				<a href="#foto1">
-					<img src="assets/img/agricultura_precisao.jpg" alt="Foto de um Drone Sobrevoando uma Plantação" title="https://www.gettyimages.com.br/detail/foto/drone-with-camera-in-field-imagem-royalty-free/881831452?adppopup=true">
+					<img src="assets/img/campo _vacas.jpg" alt="Foto do Campo onde possui algumas Vacas dentro de um Curral">
 				</a>
 				<div class="descricao">
-					- Agricultura de Precisao<br><a href="#fechar">Fechar</a>
+					- Vacas em um Curral<br><a href="#fechar">Fechar</a>
 				</div>
 			</div>
 			<div class="foto" id="foto2">
 				<a href="#foto2">
-					<img src="assets/img/agricultura_vertical.jpg" alt="Foto de uma Estufa Vertical" title="https://www.gettyimages.com.br/detail/foto/vertical-hydroponic-specialists-conversing-in-dark-imagem-royalty-free/1324696450?adppopup=true">
+					<img src="assets/img/coamo_peabiru.jpg" alt="Foto da COAMO de Peabiru">
 				</a>
 				<div class="descricao">
-					- Agricultura Vertical<br><a href="#fechar">Fechar</a>
+					- COAMO de Peabiru<br><a href="#fechar">Fechar</a>
 				</div>
 			</div>
 			<div class="foto" id="foto3">
 				<a href="#foto3">
-					<img src="assets/img/irrigacao.jpg" alt="Foto de um Irrigação" title="https://www.gettyimages.com.br/detail/foto-jornalística/farmers-use-a-telescopic-water-fertilizer-integrated-foto-jornalística/2151536848">
+					<img src="assets/img/galinha.jpg" alt="Foto de uma Galinha em um Galinheiro">
 				</a>
 				<div class="descricao">
-					- Irrigação Inteligente<br><a href="#fechar">Fechar</color:></a>
+					- Galinha no  Campo<br><a href="#fechar">Fechar</color:></a>
 				</div>
 			</div>
 			<div class="foto" id="foto4">
 				<a href="#foto4">
-					<img src="assets/img/ciadade_e_construcao.jpg" alt="Foto de um Homenageativa" title="https://www.gettyimages.com.br/detail/foto/sustainable-growth-imagem-royalty-free/1477817701?adppopup=true">
+					<img src="assets/img/horta.jpg" alt="Foto de uma Horta de cebolinha, almeirão e couve na Cidade ">
 				<div class="descricao">
-					- Coletivismo através da Teconologia<br><a href="#fechar">Fechar</color:></a>
+					- Horta de Leguminosas<br><a href="#fechar">Fechar</color:></a>
 				</div>
 			</div>
 			<div class="foto" id="foto5">
 				<a href="#foto5">
-					<img src="assets/img/cidade_agricultura.jpg" alt="Foto de Ilustrativa entre o Campo e a Cidade" title="https://www.gettyimages.com.br/detail/foto/young-people-learning-urban-gardening-imagem-royalty-free/1198696330">
+					<img src="assets/img/horta_sustentavel.jpg" alt="Foto de  uma Casa que possui uma Horta Sustentável">
 				<div class="descricao">
-					- Jovens Praticando Agricultura Sustentável <br><a href="#fechar">Fechar</color:></a>
+					- Horta Sustentável na Cidade<br><a href="#fechar">Fechar</color:></a>
 				</div>
 			</div>
 		</section>
 	</aside>
 
-	<article><a name="fotos"></a>Parceiros
-
+	<article class="Parceiros">
+		<h2>Parceiros</h2>
+		<section class="logo-parceiro">
+			<div class="logo-coamo">
+				<img src="assets/img/parceiros/coamo.png" alt="Logo da Coamo">
+			</div>
+			<div class="logo-14">
+				<img src="assets/img/parceiros/14.png" alt="Logo do 14 de Dezembro">
+			</div>
+		</section>
 	</article>
 
-	<!-- Contéudo Final com links -->
 	<footer>
 		<section class="Container-footer">
 			<div class="Icons">
@@ -119,6 +116,5 @@
 		</div>
 	</footer>
 
-	<!-- Link para Acesso do JavaScript -->
 	<script type="text/javascript" src="assets/js/script.js"></script>
 </body>
