--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 		<a href="./index.html">Home</a>
 		<a href="#principal">Principal</a>
-		<a href="#fotos">Parceiros</a>
+		<a href="#parceiro">Parceiro</a>
 	</nav>
 
 	<main><a name="principal"></a>
@@ -84,16 +84,9 @@
 		</section>
 	</aside>
 
-	<article class="Parceiros">
-		<h2>Parceiros</h2>
-		<section class="logo-parceiro">
-			<div class="logo-coamo">
-				<img src="assets/img/parceiros/coamo.png" alt="Logo da Coamo">
-			</div>
-			<div class="logo-14">
-				<img src="assets/img/parceiros/14.png" alt="Logo do 14 de Dezembro">
-			</div>
-		</section>
+	<article>
+		<a name="parceiro"></a>
+			<img class="img-parceiro" src="assets/img/14.png" alt="Logo do Colégio 14 de Dezembro">
 	</article>
 
 	<footer>
@@ -106,7 +99,7 @@
 			<div class="Nav-footer">
 				<ul><li><a href="./index.html">Home</a></li>
 					<li><a href="#principal">Principal</a></li>
-					<li><a href="#fotos">Parceiros</a></li>
+					<li><a href="#parceiro">Parceiro</a></li>
 				</ul>
 			</div>
 			
